# pretix-webracun-plugin

./: .gitignore  .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_webracun_plugin/: apps.py  signals.py
pretix_webracun_plugin/locale/de_Informal/LC_MESSAGES/: django.po
